--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@polkadot-ui/react": "^0.0.1-alpha.6",
+    "antd": "^5.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
